// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Layouts/Sidebar Layout With Content 1`] = `
.c3 svg {
  height: 1.5rem;
  width: 1.5rem;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
}

.c1 {
  margin-top: 0.25rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: 500;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1.active {
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(22,30,46,var(--bg-opacity));
}

.c1.active .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1:not(.active) {
  line-height: 1.5rem;
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

.c1:not(.active):hover {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1:not(.active):focus {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1 .c2 {
  margin-right: 1rem;
}

.c1 .c2 svg {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.group:hover .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.group:focus .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c7 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c6 {
  --text-opacity: 1;
  color: rgba(88,80,236,var(--text-opacity));
}

.c6:hover {
  --text-opacity: 1;
  color: rgba(54,47,120,var(--text-opacity));
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
  padding: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin-left: 0.75rem;
}

.c9 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c11 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c11:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.group:hover .c10 {
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

<div
  className="h-screen flex overflow-hidden bg-gray-100"
>
  <div
    className="md:hidden hidden"
  >
    <div
      className="fixed inset-0 flex z-40"
    >
      <div
        className="fixed inset-0"
      >
        <div
          className="absolute inset-0 bg-gray-600 opacity-75"
        />
      </div>
      <div
        className="relative flex-1 flex flex-col max-w-xs w-full bg-gray-800"
      >
        <div
          className="absolute top-0 right-0 -mr-14 p-1"
        >
          <button
            aria-label="Close sidebar"
            className="flex items-center justify-center h-12 w-12 rounded-full focus:outline-none focus:bg-gray-600"
            onClick={[Function]}
          >
            <svg
              className="h-6 w-6 text-white"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex-1 h-0 pt-5 pb-4 overflow-y-auto"
        >
          <div
            className="flex-shrink-0 flex items-center px-4"
          >
            <img
              alt="byteleaf logo"
              className="h-12 w-auto"
              src="/img/byteleaf_logo.svg"
            />
          </div>
          <nav
            className="mt-5 px-2"
          >
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/dashboard"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Dashboard
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/log-work"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Log Work
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/companies"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Companies
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/projects"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Projects
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/users"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Team
            </a>
          </nav>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <a
              className="c6"
              href="/profile"
              onClick={[Function]}
            >
              <img
                alt="Avatar"
                className="c7"
                src="/img/testing_thumb.jpg"
              />
            </a>
            <div
              className="c8"
            >
              <a
                className="c6"
                href="/profile"
                onClick={[Function]}
              >
                <p
                  className="c9"
                >
                  Jeff Bytezos
                </p>
              </a>
              <button
                className="c10 c11"
                onClick={[Function]}
                type="button"
              >
                Logout
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flex-shrink-0 w-14"
      />
    </div>
  </div>
  <div
    className="hidden md:flex md:flex-shrink-0"
  >
    <div
      className="flex flex-col w-64 bg-gray-800"
    >
      <div
        className="h-0 flex-1 flex flex-col pt-5 pb-4 overflow-y-auto"
      >
        <div
          className="flex items-center flex-shrink-0 px-4"
        >
          <img
            alt="byteleaf logo"
            className="h-12 w-auto"
            src="/img/byteleaf_logo.svg"
          />
        </div>
        <nav
          className="mt-5 flex-1 px-2 bg-gray-800"
        >
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/dashboard"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Dashboard
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/log-work"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Log Work
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/companies"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Companies
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/projects"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Projects
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/users"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Team
          </a>
        </nav>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <a
            className="c6"
            href="/profile"
            onClick={[Function]}
          >
            <img
              alt="Avatar"
              className="c7"
              src="/img/testing_thumb.jpg"
            />
          </a>
          <div
            className="c8"
          >
            <a
              className="c6"
              href="/profile"
              onClick={[Function]}
            >
              <p
                className="c9"
              >
                Jeff Bytezos
              </p>
            </a>
            <button
              className="c10 c11"
              onClick={[Function]}
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex flex-col w-0 flex-1 overflow-hidden"
  >
    <div
      className="md:hidden pl-1 pt-1 sm:pl-3 sm:pt-3"
    >
      <button
        aria-label="Open sidebar"
        className="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:bg-gray-200 transition ease-in-out duration-150"
        onClick={[Function]}
      >
        <svg
          className="h-6 w-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </button>
    </div>
    <main
      className="flex-1 relative z-0 overflow-y-auto pt-2 pb-6 focus:outline-none md:py-6"
    >
      <div
        className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mb-6 w-full flex justify-between items-center"
      >
        <h1
          className="text-2xl font-semibold text-gray-900"
        />
      </div>
      <div
        className="max-w-7xl mx-auto px-4 sm:px-6 md:px-8"
      >
        <div>
          Hello
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Organisms/Layouts/Sidebar Layout Without Content 1`] = `
.c3 svg {
  height: 1.5rem;
  width: 1.5rem;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
}

.c1 {
  margin-top: 0.25rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: 500;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1.active {
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(22,30,46,var(--bg-opacity));
}

.c1.active .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1:not(.active) {
  line-height: 1.5rem;
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

.c1:not(.active):hover {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1:not(.active):focus {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1 .c2 {
  margin-right: 1rem;
}

.c1 .c2 svg {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.group:hover .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.group:focus .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c7 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c6 {
  --text-opacity: 1;
  color: rgba(88,80,236,var(--text-opacity));
}

.c6:hover {
  --text-opacity: 1;
  color: rgba(54,47,120,var(--text-opacity));
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
  padding: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin-left: 0.75rem;
}

.c9 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c11 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c11:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.group:hover .c10 {
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

.c12 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c13 {
  border-width: 4px;
  border-style: dashed;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
  border-radius: 0.5rem;
  height: 24rem;
}

<div
  className="h-screen flex overflow-hidden bg-gray-100"
>
  <div
    className="md:hidden hidden"
  >
    <div
      className="fixed inset-0 flex z-40"
    >
      <div
        className="fixed inset-0"
      >
        <div
          className="absolute inset-0 bg-gray-600 opacity-75"
        />
      </div>
      <div
        className="relative flex-1 flex flex-col max-w-xs w-full bg-gray-800"
      >
        <div
          className="absolute top-0 right-0 -mr-14 p-1"
        >
          <button
            aria-label="Close sidebar"
            className="flex items-center justify-center h-12 w-12 rounded-full focus:outline-none focus:bg-gray-600"
            onClick={[Function]}
          >
            <svg
              className="h-6 w-6 text-white"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="flex-1 h-0 pt-5 pb-4 overflow-y-auto"
        >
          <div
            className="flex-shrink-0 flex items-center px-4"
          >
            <img
              alt="byteleaf logo"
              className="h-12 w-auto"
              src="/img/byteleaf_logo.svg"
            />
          </div>
          <nav
            className="mt-5 px-2"
          >
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/dashboard"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Dashboard
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/log-work"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Log Work
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/companies"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Companies
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/projects"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Projects
            </a>
            <a
              aria-current={null}
              className="c0 c1 group"
              href="/users"
              onClick={[Function]}
            >
              <div
                className="c2 c3"
              >
                <svg
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={2}
                  />
                </svg>
              </div>
              Team
            </a>
          </nav>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <a
              className="c6"
              href="/profile"
              onClick={[Function]}
            >
              <img
                alt="Avatar"
                className="c7"
                src="/img/testing_thumb.jpg"
              />
            </a>
            <div
              className="c8"
            >
              <a
                className="c6"
                href="/profile"
                onClick={[Function]}
              >
                <p
                  className="c9"
                >
                  Jeff Bytezos
                </p>
              </a>
              <button
                className="c10 c11"
                onClick={[Function]}
                type="button"
              >
                Logout
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flex-shrink-0 w-14"
      />
    </div>
  </div>
  <div
    className="hidden md:flex md:flex-shrink-0"
  >
    <div
      className="flex flex-col w-64 bg-gray-800"
    >
      <div
        className="h-0 flex-1 flex flex-col pt-5 pb-4 overflow-y-auto"
      >
        <div
          className="flex items-center flex-shrink-0 px-4"
        >
          <img
            alt="byteleaf logo"
            className="h-12 w-auto"
            src="/img/byteleaf_logo.svg"
          />
        </div>
        <nav
          className="mt-5 flex-1 px-2 bg-gray-800"
        >
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/dashboard"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Dashboard
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/log-work"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Log Work
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/companies"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Companies
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/projects"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Projects
          </a>
          <a
            aria-current={null}
            className="c0 c1 group"
            href="/users"
            onClick={[Function]}
          >
            <div
              className="c2 c3"
            >
              <svg
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                />
              </svg>
            </div>
            Team
          </a>
        </nav>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <a
            className="c6"
            href="/profile"
            onClick={[Function]}
          >
            <img
              alt="Avatar"
              className="c7"
              src="/img/testing_thumb.jpg"
            />
          </a>
          <div
            className="c8"
          >
            <a
              className="c6"
              href="/profile"
              onClick={[Function]}
            >
              <p
                className="c9"
              >
                Jeff Bytezos
              </p>
            </a>
            <button
              className="c10 c11"
              onClick={[Function]}
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex flex-col w-0 flex-1 overflow-hidden"
  >
    <div
      className="md:hidden pl-1 pt-1 sm:pl-3 sm:pt-3"
    >
      <button
        aria-label="Open sidebar"
        className="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:bg-gray-200 transition ease-in-out duration-150"
        onClick={[Function]}
      >
        <svg
          className="h-6 w-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </button>
    </div>
    <main
      className="flex-1 relative z-0 overflow-y-auto pt-2 pb-6 focus:outline-none md:py-6"
    >
      <div
        className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mb-6 w-full flex justify-between items-center"
      >
        <h1
          className="text-2xl font-semibold text-gray-900"
        />
      </div>
      <div
        className="max-w-7xl mx-auto px-4 sm:px-6 md:px-8"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;
